# eLinux_message

./: CMakeLists.txt  README.md
docs/: annotated.html  classBBB_1_1UART.html  classeLinux_1_1Message.html  classeLinux_1_1MessageBox.html  classes.html  crc32_8c.html  crc32_8h.html  crc32_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  index.html  menudata.js  message_8cpp.html  message_8h.html  message_8h_source.html  message__uart_8cpp.html  namespaceBBB.html  namespaceeLinux.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  structeLinux_1_1Message.html  structeLinux_1_1MessageFrame.html  structeLinux_1_1MessageFrame__t.html  structeLinux_1_1Message_1_1MessagePacket.html  (+4 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  namespaces_1.js  (+9 more)
include/: crc32.h  message.h  uart.h
lib/: crc32.c  uart.cpp
src/: message.cpp  message_uart.cpp
test/: CMakeLists.txt  test.cpp
